--- a/css/style.css
+++ b/css/style.css
@@ -314,3 +314,10 @@ aside p{
     margin: 10px 0 0;
 }
 
+.grid{
+    display: grid;
+    gap: 26px;
+    grid-template-columns: repeat(auto-fit,minmax(240px, 1fr));
+    margin-top: 6%;
+    margin-bottom: 50px;
+}
